@@ -15,6 +15,8 @@ missing
 moc_*
 src/glassplayer/cmdswitch.cpp
 src/glassplayer/cmdswitch.h
+src/glassplayer/codec.cpp
+src/glassplayer/codec.h
 src/glassplayer/connector.cpp
 src/glassplayer/connector.h
 src/glassplayer/glasslimits.h
