@@ -244,6 +244,11 @@ ln -s ../../src/common/cmdswitch.cpp src/glassplayer/cmdswitch.cpp
 rm -f src/glassplayer/cmdswitch.h
 ln -s ../../src/common/cmdswitch.h src/glassplayer/cmdswitch.h
 
+rm -f src/glassplayer/codec.cpp
+ln -s ../../src/common/codec.cpp src/glassplayer/codec.cpp
+rm -f src/glassplayer/codec.h
+ln -s ../../src/common/codec.h src/glassplayer/codec.h
+
 rm -f src/glassplayer/connector.cpp
 ln -s ../../src/common/connector.cpp src/glassplayer/connector.cpp
 rm -f src/glassplayer/connector.h
