@@ -34,10 +34,12 @@ dist_glassplayer_SOURCES = conn_xcast.cpp conn_xcast.h\
                            glassplayer.cpp glassplayer.h
 
 nodist_glassplayer_SOURCES = cmdswitch.cpp cmdswitch.h\
+                             codec.cpp codec.h\
                              connector.cpp connector.h\
                              connectorfactory.cpp connectorfactory.h\
                              glasslimits.h\
                              logging.cpp logging.h\
+                             moc_codec.cpp\
                              moc_conn_xcast.cpp\
                              moc_connector.cpp\
                              moc_glassplayer.cpp\
@@ -54,6 +56,7 @@ CLEANFILES = *~\
              *ilk
 
 DISTCLEANFILES = cmdswitch.cpp cmdswitch.h\
+                 codec.cpp codec.h\
                  connector.cpp connector.h\
                  glasslimits.h\
                  logging.cpp logging.h\
